<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffff99">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="410dp"
        android:layout_height="39dp"
        android:background="#86B691F8"
        android:text="@string/workout_guide"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#AB85E495"
        android:text="@string/abs"
        android:textColor="#131313"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#F8B7CD"
        android:text="@string/chest"
        android:textColor="#131313"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.345" />

    <Button
        android:id="@+id/button7"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#F3DFA5"
        android:text="@string/leg"
        android:textColor="#131313"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/button8"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#9ACCF3"
        android:text="@string/cardio"
        android:textColor="#131313"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/button9"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#ECA791"
        android:text="@string/back"
        android:textColor="#131313"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/button10"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#AD8EE3"
        android:text="@string/shoulder"
        android:textColor="#131313"
        android:textSize="20sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/button11"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#F85366"
        android:text="@string/triceps"
        android:textColor="#131313"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.893" />

    <Button
        android:id="@+id/button12"
        android:layout_width="130dp"
        android:layout_height="79dp"
        android:backgroundTint="#90F1E8"
        android:text="@string/biceps"
        android:textColor="#131313"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="251dp"
        android:layout_height="100dp"
        android:text="@string/instruction"
        android:textAlignment="center"
        android:textColor="#121111"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />


</androidx.constraintlayout.widget.ConstraintLayout>
