<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffff99">

    <TextView
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:background="#50F4FA"
        android:text="@string/activity_1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:fontFamily="arial"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        tools:text="Meal Plan" />

    <Button
        android:id="@+id/button"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:backgroundTint="#F3E357"
        android:text="@string/underweight"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <Button
        android:id="@+id/button2"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:backgroundTint="#78ED6B"
        android:text="@string/normal"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <Button
        android:id="@+id/button3"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:backgroundTint="#ED7385"
        android:text="@string/overweight"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <Button
        android:id="@+id/button4"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:backgroundTint="#F4334F"
        android:text="@string/very_overweight"
        android:textSize="25sp"
        android:fontFamily="arial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />
</androidx.constraintlayout.widget.ConstraintLayout>
